Fixing width on smaller screens

--- a/src/Header.css
+++ b/src/Header.css
@@ -57,8 +57,8 @@ nav a:hover {
   scale: 1.2;
 }
 
-@media (max: 900px) {
+@media (max-width: 1000px) {
   .header {
-    width: 100%;
+    width: 100vw;
   }
 }
